# cd15828-Claude-AI-MCP-in-Action

./: .gitignore  README.md
Build an Inventory Agent with MCP Tools/01-structured-tool-results/solution/: README.md  pyproject.toml
Build an Inventory Agent with MCP Tools/01-structured-tool-results/solution/inventory_agent/: agent.py
Build an Inventory Agent with MCP Tools/01-structured-tool-results/starter/: README.md
Build an Inventory Agent with MCP Tools/02-differentiated-tool-descriptions/solution/: README.md
Build an Inventory Agent with MCP Tools/02-differentiated-tool-descriptions/starter/: README.md
Build an Inventory Agent with MCP Tools/03-tool-distribution-and-choice/solution/: README.md
Build an Inventory Agent with MCP Tools/03-tool-distribution-and-choice/starter/: README.md
Build an Inventory Agent with MCP Tools/04-built-in-vs-custom-selection/solution/: README.md
Build an Inventory Agent with MCP Tools/04-built-in-vs-custom-selection/starter/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/01-scoped-config-ci-gate/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/01-scoped-config-ci-gate/solution/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/01-scoped-config-ci-gate/starter/: .gitignore  README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/solution/: README.md  pyproject.toml
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/solution/data/claims/: claims.json
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/solution/mcp_governance/: cli.py  contracts.py  loop.py  schema.py  servers.py
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/solution/tests/: test_decision.py
Implement MCP Governance with Scoped Config and an Audited Agent Loop/02-governed-tools/starter/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/03-audited-loop/: README.md
Implement MCP Governance with Scoped Config and an Audited Agent Loop/03-audited-loop/solution/: README.md
(+74 files in other folders)
